# CsvSchemaMapper

./: .gitignore  README.md  app.py  pyproject.toml  ririgorous_test_data.csv
common_utils/: app_utils.py  bedrock_agent.py  constants.py  data_validator.py  gemini_agent.py  learned_mappings.py  schema_mapper.py
modules/: schema_loader.py
schemas/: canonical.json  synonyms.json
steps/: __init__.py  step1_upload_csv.py  step2_schema_mapper.py  step3_data_quality_fixer.py  step4_review.py
